package com.jobshunter.database.entities;

import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.FetchType;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.JoinColumn;
import jakarta.persistence.ManyToOne;
import jakarta.persistence.PrePersist;
import jakarta.persistence.Table;
import jakarta.persistence.UniqueConstraint;
import java.time.Instant;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

@Getter
@Setter
@NoArgsConstructor
@Entity
@Table(name = "user_jobs",
    uniqueConstraints = @UniqueConstraint(name = "uc_user_jobs_user_url", columnNames = {"user_id", "url"}))
public class UserJobEntity {

  @Id
  @GeneratedValue(strategy = GenerationType.IDENTITY)
  private Long id;

  @ManyToOne(fetch = FetchType.EAGER)
  @JoinColumn(name = "user_id", nullable = false)
  private UserEntity user;

  @Column(name = "url", nullable = false, length = 2048)
  private String url;

  @ManyToOne(fetch = FetchType.EAGER)
  @JoinColumn(name = "model_id")
  private AiModelEntity aiModel;

  @ManyToOne(fetch = FetchType.EAGER)
  @JoinColumn(name = "job_order_id")
  private JobOrderEntity jobOrder;

  @ManyToOne(fetch = FetchType.EAGER)
  @JoinColumn(name = "prompt_id")
  private UserPromptEntity prompt;

  @Column(name = "created_at", updatable = false)
  private Instant createdAt;

  @Column(name = "score")
  private Integer score;

  public UserJobEntity(UserEntity user, String url, AiModelEntity aiModel, JobOrderEntity jobOrder) {
    this.user = user;
    this.url = url;
    this.aiModel = aiModel;
    this.jobOrder = jobOrder;
  }

  @PrePersist
  void prePersist() {
    if (createdAt == null) {
      createdAt = Instant.now();
    }
  }
}
